--- a/mpst_ts/codegen/generator/browser/templates/send_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/templates/send_component.tsx.j2
@@ -17,20 +17,19 @@ export abstract class S{{ state.id }}<
   _SS
 > {
 
-  {% for label in state.labels -%}
-  protected {{ label }}: SendComponentFactory<any>
-  {%- endfor %}
-
+  {% for action in state.actions -%}
+  protected {{ action.label }}: SendComponentFactory<[{{ action.payloads|join(', ') }}]>;
+  {% endfor %}
   constructor(props: P & _P) {
     super(props);
     {% for action in state.actions -%}
-    {%- if efsm.is_send_state(action.succ) -%}
-    this.{{ action.label }} = props.factory<any>('{{ action.label }}' , SendState.S{{ action.succ }});
-    {%- elif efsm.is_receive_state(action.succ) -%}
-    this.{{ action.label }} = props.factory<any>('{{ action.label }}' , ReceiveState.S{{ action.succ }});
-    {%- else -%}
-    this.{{ action.label }} = props.factory<any>('{{ action.label }}' , TerminalState.S{{ action.succ }});
-    {%- endif -%}
-    {%- endfor %}
+    {% if efsm.is_send_state(action.succ) -%}
+    this.{{ action.label }} = props.factory<[{{ action.payloads|join(', ') }}]>('{{ action.label }}' , SendState.S{{ action.succ }});
+    {% elif efsm.is_receive_state(action.succ) -%}
+    this.{{ action.label }} = props.factory<[{{ action.payloads|join(', ') }}]>('{{ action.label }}' , ReceiveState.S{{ action.succ }});
+    {% else -%}
+    this.{{ action.label }} = props.factory<[{{ action.payloads|join(', ') }}]>('{{ action.label }}' , TerminalState.S{{ action.succ }});
+    {% endif -%}
+    {% endfor %}
   }
 }
