Fix type signature for React message sending event handler

--- a/mpst_ts/codegen/generator/browser/templates/receive_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/templates/receive_component.tsx.j2
@@ -21,7 +21,7 @@ type {{ action.label }}Message = {
 
 type Message = {% for label in state.labels -%}{{ '| ' ~ label ~ 'Message' }}{%- endfor %}
 
-export abstract class S{{ state.id }}<
+export default abstract class S{{ state.id }}<
   _P = {},
   _S = {},
   _SS = any
