--- a/mpst_ts/codegen/generator/browser/templates/send_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/templates/send_component.tsx.j2
@@ -7,7 +7,7 @@ type P = {
   factory: SendComponentFactoryFactory
 }
 
-export abstract class S{{ state.id }}<
+export default abstract class S{{ state.id }}<
   _P = {},
   _S = {},
   _SS = any
