--- a/mpst_ts/codegen/generator/browser/templates/terminal_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/templates/terminal_component.tsx.j2
@@ -1,6 +1,6 @@
 import { Component } from "react";
 
-export abstract class S{{ state }}<
+export default abstract class S{{ state }}<
   _P = {},
   _S = {},
   _SS = any
