--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
@@ -42,9 +42,9 @@ export default abstract class S{{ state.id }}<
       {% for action in state.actions -%}
       case Labels.{{ action.label }}: {
         this.{{ action.label }}(...parsedMessage.payload);
-        {% if efsm.is_send_state(action.succ) -%}
+        {% if endpoint.efsm.is_send_state(action.succ) -%}
         return SendState.S{{ action.succ }};
-        {% elif efsm.is_receive_state(action.succ) -%}
+        {% elif endpoint.efsm.is_receive_state(action.succ) -%}
         return ReceiveState.S{{ action.succ }};
         {% else -%}
         return TerminalState.S{{ action.succ }};
