--- a/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
@@ -23,7 +23,7 @@ interface JoinMessage {
 /**
  * Joining
  */
-export class {{ efsm.metadata.role }}
+export class {{ endpoint.role }}
 {
 
   private wss: WebSocket.Server
@@ -31,13 +31,13 @@ export class {{ efsm.metadata.role }}
   private roleToSocket: Partial<RoleToSocket>
 
   constructor(wss: WebSocket.Server,
-              initialState: Implementation.S{{ efsm.initial_state.id }})
+              initialState: Implementation.S{{ endpoint.efsm.initial_state.id }})
   {
     this.wss = wss;
-    this.waiting = new Set<Roles>([{% for role in efsm.other_roles %}Roles.{{ role ~ (',' if not loop.last else '') }}{% endfor %}])
+    this.waiting = new Set<Roles>([{% for role in endpoint.efsm.other_roles %}Roles.{{ role ~ (',' if not loop.last else '') }}{% endfor %}])
 
     this.roleToSocket = {
-      {% for role in efsm.other_roles -%}
+      {% for role in endpoint.efsm.other_roles -%}
       [Roles.{{ role }}]: undefined,
       {%- endfor %}
     };
@@ -60,7 +60,7 @@ export class {{ efsm.metadata.role }}
             connected: true
           }));
         }
-        new _{{ efsm.metadata.role }}(this.wss, this.roleToSocket as RoleToSocket, initialState);
+        new _{{ endpoint.role }}(this.wss, this.roleToSocket as RoleToSocket, initialState);
       }
     }
 
@@ -70,18 +70,18 @@ export class {{ efsm.metadata.role }}
 
 }
 
-class _{{ efsm.metadata.role }} {
+class _{{ endpoint.role }} {
 
   private wss: WebSocket.Server
   private roleToSocket: RoleToSocket
   
-  private initialState: Implementation.S{{ efsm.initial_state.id }}
+  private initialState: Implementation.S{{ endpoint.efsm.initial_state.id }}
   private messageQueue: any[] = []
   private handlerQueue: (MessageHandler)[] = []
 
   constructor(wss: WebSocket.Server,
               roleToSocket: RoleToSocket,
-              initialState: Implementation.S{{ efsm.initial_state.id }}) {
+              initialState: Implementation.S{{ endpoint.efsm.initial_state.id }}) {
     this.wss = wss;
     this.roleToSocket = roleToSocket;
     this.initialState = initialState;
@@ -148,6 +148,6 @@ class _{{ efsm.metadata.role }} {
 
     terminate() {
       Object.values(this.roleToSocket).forEach(socket => socket.close());
-      new {{ efsm.metadata.role }}(this.wss, this.initialState);
+      new {{ endpoint.role }}(this.wss, this.initialState);
     }
 }
