--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/terminal_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/terminal_component.tsx.j2
@@ -1,10 +1,10 @@
-import { Component } from "react";
+import React from "react";
 
 export default abstract class S{{ state }}<
   _P = {},
   _S = {},
   _SS = any
-> extends Component<
+> extends React.Component<
   _P,
   _S,
   _SS
