--- a/mpst_ts/codegen/generator/node/node_v3/templates/efsm.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v3/templates/efsm.ts.j2
@@ -1,3 +1,6 @@
+{% for type in endpoint.types -%}
+import { {{ type.external ~ ((' as ' ~ type.alias) if type.external != type.alias else '') }} } from "{{ type.path }}";
+{% endfor %}
 // ==============
 // Protocol roles
 // ==============
