Update codegen templates for attaching role on message and server-side routing

--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/EFSM.ts.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/EFSM.ts.j2
@@ -1,21 +1,35 @@
 // EFSM.ts
 
+// =====
+// Roles
+// =====
+
+export enum Roles {
+  {% for role in endpoint.efsm.other_roles -%}
+  {{ role }} = "{{ role }}",
+  {%- endfor %}
+};
+
+// ======
+// States
+// ======
+
 export enum SendState {
   {% for state in endpoint.efsm.send_states -%}
   S{{ state.id }} = 'S{{ state.id }}',
   {%- endfor %}
-}
+};
 
 export enum ReceiveState {
   {% for state in endpoint.efsm.receive_states -%}
   S{{ state.id }} = 'S{{ state.id }}',
   {%- endfor %}
-}
+};
 
 export enum TerminalState {
   {% if endpoint.efsm.has_terminal_state() -%}
   S{{ endpoint.efsm.terminal_state }} = 'S{{ endpoint.efsm.terminal_state }}',
   {%- endif %}
-}
+};
 
-export type State = ReceiveState | SendState | TerminalState
+export type State = ReceiveState | SendState | TerminalState;
